# smart-ticket-customer-service-system-course

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Lesson-1.md  Makefile  README.md  课程大纲.md  项目介绍.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  classifier.py  llm.py  service.py
backend/app/api/: __init__.py  ai.py  auth.py  chat.py  kb.py  messages.py  router.py  stats.py  tickets.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  session.py
backend/app/rag/: __init__.py  chunk.py  embeddings.py  store.py  utils.py
backend/app/schemas/: ai.py  chat.py  kb.py  messages.py  ticket.py  user.py
backend/samples/: billing_refund_policy.md  faq_password_reset.md  priority_guidelines.md
backend/tests/: conftest.py  test_health.py  test_kb_rag.py  test_tickets_crud.py
data/kb/: sample_kb.md
docs/: architecture.md  configuration.md  lesson-1.md  lesson-2.md  lesson-3.md  lesson-4.md  lesson-5.md  lesson-6.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: ai.ts  auth.ts  chat.ts  client.ts  kb.ts  stats.ts  tickets.ts  users.ts
frontend/src/components/: AppLayout.tsx
frontend/src/pages/: CreateTicket.tsx  Dashboard.tsx  Home.tsx  (+4 more)
infra/: docker-compose.prod.yml  docker-compose.yml
samples/kb/: account_lockout.md  troubleshooting_login.md
scripts/: bootstrap.sh  embed_kb.py
(+1 files in other folders)
